--- a/documento.tex
+++ b/documento.tex
@@ -170,23 +170,18 @@
 	\imprimircapa
 	\imprimirfolhaderosto{}
 	%\imprimirfichacatalografica{elementos-pre-textuais/Ficha_Catalograficaelizandra}
-	%\imprimirfolhadeaprovacao{}
+	\imprimirfolhadeaprovacao{}
     \imprimirdedicatoria{elementos-pre-textuais/dedicatoria}
-	%\imprimiragradecimentos{elementos-pre-textuais/agradecimentos}
-	%\imprimirepigrafe{elementos-pre-textuais/epigrafe}
-	%\imprimirresumo{elementos-pre-textuais/resumo}
-	%\imprimirabstract{elementos-pre-textuais/abstract}
+	\imprimiragradecimentos{elementos-pre-textuais/agradecimentos}
+	\imprimirepigrafe{elementos-pre-textuais/epigrafe}
+	\imprimirresumo{elementos-pre-textuais/resumo}
+	\imprimirabstract{elementos-pre-textuais/abstract}
 	\imprimirlistadeilustracoes
 	\imprimirsumario
 	
 	%Elementos textuais
 	\textual
 		\input{elementos-textuais/1Introdução}
-        %\input{elementos-textuais/fundamentos}
-        %\input{elementos-textuais/espaços}
-        % \input{elementos-textuais/5objetivos}
-        %\input{elementos-textuais/6metodologia}
-        % \input{elementos-textuais/7cronograma}
         \input{elementos-textuais/espacos-funcoes-mensuraveis}
         \input{elementos-textuais/teoria-medida}
         \input{elementos-textuais/teoria-integracao}
@@ -198,6 +193,6 @@
 	
 	%\input{elementos-pos-textuais/apendices/movimento-vizinhança-equilíbrio-estável}	
       
-        
+     \printindex
 
 \end{document}
