--- a/elementos-pre-textuais/abstract.tex
+++ b/elementos-pre-textuais/abstract.tex
@@ -1,6 +1,7 @@
-The measure theory is an extremely important subject for mathematics students, as it serves as the foundation for various areas of research such as Functional Analysis, Geometric Measure Theory, Probability, Statistics, among others. Considering that the undergraduate mathematics program has a strong emphasis on mathematics education, it becomes necessary to provide a consolidated way of presenting pure mathematics to students who wish to pursue this mathematical inclination in their postgraduate studies. Therefore, this project aims to demonstrate how a structure can be developed to meet this demand, focusing on addressing these students' needs through the study of $L^p$ spaces and their basic applications in functional analysis.
+The theory of measure and integration is undoubtedly one of the most important topics for the advancement in the study of mathematics. It was initially developed by Newton and Leibniz and later generalized by Lebesgue. Originally intended for application in physics, Lebesgue's generalization has found applications in various fields such as Functional Analysis, Probability, Statistics, Partial Differential Equations, among others.
+Although Lebesgue's integration theory is extremely important today, it is not commonly presented to undergraduate students in exact sciences. With that said, this work aims to introduce the theory of measure and Lebesgue integration in an introductory manner to undergraduate students in natural sciences, seeking to expose some of the most relevant and elementary results. This is done using a basic methodology with a quantitative approach through a literature review.
+Through this review, we also achieve the following specific objectives: define the foundation of the study of measure theory through measurable spaces, understand the generalized measure theory, and describe the process of constructing the Lebesgue integral as the measure theory advances.
+Finally, a proposal is suggested for presenting the topic covered in this work to undergraduate students in exact sciences.
 
-% Separe as Keywords por ponto
-
-\keywords{Measure theory; $L^p$ spaces; Functional Analysis.}
-
+% Separe as Keywords por ponto e vírgula ';' e finalize por .
+\keywords{measure theory; Lebesgue integration theory; calculus education.}
