--- a/elementos-pre-textuais/agradecimentos.tex
+++ b/elementos-pre-textuais/agradecimentos.tex
@@ -1,4 +1,9 @@
-A mim mesmo por não ter surtado em nenhum momento.
+A Deus, por todas as bênçãos que me concedeu nesta vida.\\
+Aos meus professores de ensino médio Ellen Lima e Renato Castro pelo incentivo aos estudos.\\
+Aos professores Leo Ivo da Silva Souza e Jose Eduardo Moura Garcez pelos conselhos e motivações acadêmicas.\\
+Ao Prof. Dr. Nícolas Alcântara de Andrade por me apresentar esta maravilhosa teoria no curso de probabilidade. \\
+Ao Prof. Dr. Claudemir Silvino Leandro pela exímia orientação deste trabalho.\\
+Aos colegas da Universidade Estadual do Ceará pela ajuda direta ou indireta.\\
 
 
 
