--- a/elementos-pre-textuais/epigrafe.tex
+++ b/elementos-pre-textuais/epigrafe.tex
@@ -1,5 +1,12 @@
-“A matemática não é apenas uma questão de números, mas sim de ideias abstratas e padrões universais.”
+\enquote{Demore o tempo que
+for para decidir o que
+você quer da vida, e
+depois que decidir
+não recue ante
+nenhum pretexto,
+porque o mundo
+tentará te dissuadir.}
 
-\autordaepigrafe{Richard Dedekind}
+\autordaepigrafe{Friedrich Nietzsche}
 
 % Deixe o espaço entre a epigrafe e o autor.
