--- a/elementos-pre-textuais/resumo.tex
+++ b/elementos-pre-textuais/resumo.tex
@@ -1,7 +1,12 @@
-% A  teoria da medida é um conteúdo demasiadamente importante para os estudantes de matemática, pois é base de estudo para várias áreas de pesquisa tais como Análise Funcional, Teoria Geométrica da Medida, Probabilidade, Estatística, dentre outras. Tendo em mente que o curso de licenciatura em matemática tem uma ênfase muito inclinada para educação matemática, faz-se necessário uma forma de apresentar matemática pura de maneira consolidada aos alunos que desejam estudar essa inclinação da matemática na sua pós graduação. Assim, este projeto visa mostrar como pode-se realizar uma estrutura que atenda a esta demanda visando atender estes discentes por meio do estudo dos espaços $L^p$'s e suas aplicações básicas na análise funcional.
-
-Necessita escrever ainda
+A teoria da medida e da integração é, sem dúvidas, um dos temas mais importantes para o avanço nos estudos de matemática.
+Esta foi desenvolvida, inicialmente, por Newton e Leibniz sendo generalizada posteriormente por Lebesgue.
+A priori, seu desenvolvimento tinha o intuito de aplicação no ramo da física, mas ao ser generalizada por Lebesgue apresenta aplicações nas mais diversas áreas tais como: Análise Funcional, Probabilidade, Estatística, Equações Diferenciais Parciais, dentre outras. 
+Embora a teoria da integração de Lebesgue seja extremamente importante na atualidade não é comumente apresentada para alunos de graduação em ciências exatas.
+Dito isso, este trabalho visa abordar a teoria da medida e da integração de Lebesgue de maneira introdutória para alunos de graduação em ciências da natureza buscando expôr alguns dos resultados mais relevantes e elementares.
+Isso é feito utilizando uma metodologia de natureza básica com abordagem quantitativa por meio de uma revisão bibliográfica.
+Por meio dela, também conseguimos alcançar os seguintes objetivos específicos: definir a base do estudo da teoria da medida por meio dos espaços mensuráveis,
+conhecer a teoria da medida de maneira generalizada e descrever o processo da construção da integral de Lebesgue mediante o avanço da teoria da medida.
+Por fim, é sugerido uma proposta de exposição do tema abordado neste trabalho para alunos de graduação em ciências exatas.
 
 % Separe as palavras-chave por ponto
-
-\palavraschave{Teoria da medida; Teoria da Integração de Lebesgue; Espaços $L^p$.}
+\palavraschave{teoria da medida; teoria da integração de lebesgue; ensino de cálculo.}
