--- a/elementos-textuais/1Introdução.tex
+++ b/elementos-textuais/1Introdução.tex
@@ -14,16 +14,16 @@
 % Justificativa
     Conseguir medir grandezas é essencial em nosso cotidiano.
     Medimos tempo, distância, velocidade, etc.
-    Embora seja usada constantemente nos dias atuais, a ação de medir é bem antiga sendo datada, por exemplo, em 3100 a.C.
-    Em relação à essa época, Boyer (2012) expõe que os egípcios possuíam uma precisão grandiosa no que se referia a contar e medir;
+    Embora seja usada constantemente nos dias atuais, a ação de medir é bem antiga possuindo registro de seu uso em 3100 a.C.
+    Em relação à essa época, \citeauthor{boy}(\citeyear{boy}) expõe que os egípcios possuíam uma precisão grandiosa no que se referia a contar e medir;
     com essa habilidade, fizeram feitos extraordinários como o calendário solar e a construção das pirâmides.
     Desde então vem-se trabalhando no avanço da teoria da medida tanto de forma prática como de forma teórica.
     
     As aplicações mais teóricas de medida vieram com os estudos de Newton que trataram sobre taxa de variação de quantidades continuamente variáveis tais como
-    comprimentos, áreas e volumes; tendo desenvolvido, também, um método para calcular a soma das ordenadas sob uma curva (Boyer, 2012). 
-    Embasando-se no mesmo autor, vemos que esse método recebeu o nome de integral e foi denotado, por Leibniz, como $\int$; essa definição de integral foi refinada por Riemann e é, nos dias de hoje, comumente chamada de Integral de Riemann. 
+    comprimentos, áreas e volumes; tendo desenvolvido, também, um método para calcular a soma das ordenadas sob uma curva \cite{boy}. 
+    Embasando-se no mesmo autor, vemos que esse método recebeu o nome de integral e foi denotado, por Leibniz, como $\displaystyle \int$; essa definição de integral foi refinada por Riemann e é, nos dias de hoje, comumente chamada de Integral de Riemann. 
     
-    Pelo fim do século XIX, muitos matemáticos buscavam refutar teoremas já estabelecidos por meio de contraexemplos construídos por funções \enquote{patológicas}(Boyer, 2012).
+    Pelo fim do século XIX, muitos matemáticos buscavam refutar teoremas já estabelecidos por meio de contraexemplos construídos por funções \enquote{patológicas}\cite{boy}.
     Isso gerou um grande movimento matemático, no século XX, que tinha como objetivo trazer rigor à matemática.
     Foi nesse movimento que o matemático francês Henri Lebesgue (1875-1941) notou aplicações limitadas da integral de Riemann através do seguinte pensamento:
     
@@ -32,7 +32,7 @@
     	excepcionais, pois assume não mais que uns poucos pontos de descontinuidade para a função.
     	Se uma função $y = f(x)$ tem muitos pontos de descontinuidade, então, à medida que o intervalo $x_{i+1} - x_i$
     	se torna menor, os valores $f(x_{i+1})$ e $f(x_i)$ não ficam
-    	necessariamente próximos (Boyer, 2012, p.416).  	
+    	necessariamente próximos \cite[p.416]{boy}.  	
     \end{citlon}
 
    % tema
@@ -43,7 +43,7 @@
     	da função em subintervalos $\Delta y_i$ e em cada subintervalo
     	escolheu um valor $\eta_1$. 
     	Então, achou a \enquote{medida} $\mu(E_i)$ do conjunto $E_i$ dos pontos do eixo $x$ para os
-    	quais os valores de $f$ são aproximadamente iguais a $\eta_1$(Boyer, 2012, p.416).
+    	quais os valores de $f$ são aproximadamente iguais a $\eta_1$\cite[p.416]{boy}.
     \end{citlon}
     
     A integral que foi gerada por meio da construção anterior recebeu o nome de Integral de Lebesgue que é o tema deste trabalho.
@@ -81,10 +81,10 @@
   
   	% Metodologia
   	
-  	A pesquisa que foi realizada tem natureza básica, pois segundo Prodanov et al. (\citeyear{profreitas}, p.51) uma pesquisa básica
+  	A pesquisa que foi realizada tem natureza básica, pois segundo \cite[p.51]{profreitas} uma pesquisa básica
   	\enquote{objetiva gerar conhecimentos novos úteis para o avanço da ciência sem aplicação prática prevista. Envolve verdades e interesses universais}. 
   	
-  	Além disso, de acordo com o mesmo autor, a pesquisa também constou com uma abordagem quantitativa uma vez que os fatos podem ser relevados fora de uma complexidade social, econômica e política (Prodanov et al.,\citeyear{profreitas}). 
+  	Além disso, de acordo com o mesmo autor, a pesquisa também constou com uma abordagem quantitativa uma vez que os fatos podem ser relevados fora de uma complexidade social, econômica e política \cite{profreitas}. 
   	Pode-se observar, ainda, que a pesquisa teve objetivo exploratório, pois segundo \citeauthor{gil}:
   	
   	\begin{citlon}
@@ -93,14 +93,14 @@
   		A coleta de dados pode ocorrer de diversas maneiras, mas geralmente envolve: 1.levantamento bibliográfico;
   		2. entrevistas com pessoas que tiveram experiência prática com o assunto; 
   		e 3. análise de exemplos que estimulem a compreensão (SELLTIZ et al., 1967, p. 63). 
-  		Em virtude dessa flexibilidade, torna-se difícil, na maioria dos casos, "rotular" os estudos exploratórios, mas é possível identificar pesquisas bibliográficas, estudos de caso e mesmo levantamentos de campo que podem ser considerados estudos exploratórios. (\citeyear{gil}, p.33)
+  		Em virtude dessa flexibilidade, torna-se difícil, na maioria dos casos, "rotular" os estudos exploratórios, mas é possível identificar pesquisas bibliográficas, estudos de caso e mesmo levantamentos de campo que podem ser considerados estudos exploratórios (\citeyear{gil}, p.33).
   	\end{citlon}
   	
   	Como fora supracitado, pode-se atribuir vários procedimentos técnicos à pesquisas exploratórias. 
-  	O nosso procedimento técnico foi realizado por meio de uma pesquisa bibliográfica devido ser elaborada com base em material já publicado (\citeauthor{gil}, \citeyear{gil}).
+  	O nosso procedimento técnico foi realizado por meio de uma pesquisa bibliográfica devido ser elaborada com base em material já publicado \cite{gil}.
   	
-  	
-    [AQUI FALTA POR UM RESUMO DA CONCLUSÃO QUE NÃO FIZ AINDA!!!!!!!!]
+  	Por fim, sugerimos como pode ser apresentada a teoria da medida e da integração de Lebesgue para alunos de graduação em ciências exatas.
+  	Utilizando a ordem com que os conteúdos foram desenvolvidos e organizados neste trabalho, bem como o uso de ilustrações dele.
     
     
     
